--- a/services/auth/pkg/swagger/index.html
+++ b/services/auth/pkg/swagger/index.html
@@ -15,6 +15,8 @@
     const ui = SwaggerUIBundle({
       urls: [
         { url: "/userApi.swagger.json", name: "User API V1" },
+        { url: "/authApi.swagger.json", name: "Auth API V1" },
+        { url: "/accessApi.swagger.json", name: "Access API V1" },
         // Добавьте дополнительные файлы API здесь
       ],
       dom_id: "#swagger-ui",
